fixed bugs for scrollbar before funcionality attempt

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -693,7 +693,7 @@
 		.scrollbar-dot {
 			height: 5px;
 			width: 5px;
-			background-color: black;
+			background-color: #666666;
 			border-radius: 50%;
 			display: inline-block;
 		  }
@@ -717,11 +717,11 @@
 			font-size: smaller;
 		}
 		#draggable-element{
-			height: 14px;
-			width: 14px;
+			height: 15px;
+			width: 15px;
 			border-radius: 50%;
 			position: absolute;
-			z-index: 100;
+			z-index: 1000;
 			background-color: black;
 			cursor: move;
 		}
